--- a/style2.css
+++ b/style2.css
@@ -8,4 +8,11 @@ h1 {
     padding-bottom: 10px;
     /* 下線とテキストの間にスペースを追加 */
 }
-
+.centered {
+     cursor: pointer;
+     position: absolute;
+     top: 0;
+     left: 100px ;
+     margin: 10px;
+     /* ボタンが画面の端にくっつかないようにするための余白 */
+ }
